--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 11:09:00 AM</p>
+    <p class="lastupdate">09/17/2020 11:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">72.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">72.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">71.7&#176;F</td>
+        <td class="data">72.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.6&#176;F</td>
+        <td class="data">52.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">51%</td>
+        <td class="data">49%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.958 inHg (-0.001)</td>
+        <td class="data">29.959 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">1 mph NE (45&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.0&#176;F</td>
+        <td class="data">74.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:07:41 AM">
-            71.7</span><br/>
+          <span title="11:13:39 AM">
+            72.8</span><br/>
           <span title="06:56:13 AM">
             50.8</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:07:41 AM" class="hival">
-            71.7</span>
+          <span title="11:13:39 AM" class="hival">
+            72.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:07:41 AM">
-            52.6</span><br/>
+          <span title="11:13:39 AM">
+            53.1</span><br/>
           <span title="05:31:48 AM">
             41.4</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:06 AM">
             80</span><br/>
-          <span title="10:58:35 AM">
-            51</span>
+          <span title="11:13:57 AM">
+            49</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          59
+          58
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 20 hours, 22 minutes</td>
+      <td class="data">15 days, 20 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 20 hours, 22 minutes</td>
+      <td class="data">15 days, 20 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
